<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo3"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        android:scaleType="centerCrop"
        android:layout_marginBottom="70dp"
        android:src="@drawable/logo2" />

    <EditText
        android:layout_marginTop="-50dp"
        android:id="@+id/edtPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso_kg"
        android:inputType="numberDecimal"
        android:background="@drawable/opcao_background"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/edtAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/altura_m"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:background="@drawable/opcao_background"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textSize="17sp"
        android:textStyle="bold"
        android:backgroundTint="@color/fundo_botao"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seu_imc"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="@color/fundo_botao"
        android:layout_marginTop="10dp" />

</LinearLayout>